iptables-rules
# Generated by iptables-save v1.6.0 on Wed Apr 15 17:09:28 2020
*raw
:PREROUTING ACCEPT [179549:33062576]
:OUTPUT ACCEPT [34124:4944290]
COMMIT
# Completed on Wed Apr 15 17:09:28 2020
# Generated by iptables-save v1.6.0 on Wed Apr 15 17:09:28 2020
*nat
:PREROUTING ACCEPT [3386:190356]
:POSTROUTING ACCEPT [1:67]
:OUTPUT ACCEPT [1:67]
-A PREROUTING -d &a/32 -p tcp -m tcp --dport &d -j DNAT --to-destination 10.8.0.6:&c
-A PREROUTING -d &a/32 -p tcp -m tcp --dport 25563 -j DNAT --to-destination 10.8.0.6:25563
-A PREROUTING -d &a/32 -p tcp -m tcp --dport 8443 -j DNAT --to-destination 10.8.0.6:8443
-A POSTROUTING -d 10.8.0.6/32 -j MASQUERADE
COMMIT
# Completed on Wed Apr 15 17:09:28 2020
# Generated by iptables-save v1.6.0 on Wed Apr 15 17:09:28 2020
*mangle
:PREROUTING ACCEPT [179549:33062576]
:INPUT ACCEPT [79793:19142627]
:FORWARD ACCEPT [99728:13916533]
:OUTPUT ACCEPT [34123:4944186]
:POSTROUTING ACCEPT [133851:18860719]
COMMIT
# Completed on Wed Apr 15 17:09:28 2020
# Generated by iptables-save v1.6.0 on Wed Apr 15 17:09:28 2020
*filter
:INPUT DROP [6114:342726]
:FORWARD ACCEPT [99728:13916533]
:OUTPUT ACCEPT [34123:4944186]
-A INPUT -p udp -m udp --dport &e -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport &b -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i tap0 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 15680 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 25563 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8443 -j ACCEPT
COMMIT
# Completed on Wed Apr 15 17:09:28 2020
